# KingKongRTC

./: .gitignore  CMakeLists.txt  README.md
api/: CMakeLists.txt  empty.cpp  empty.h  version.h
api/video/: CMakeLists.txt  video_frame.cpp  video_frame.h
cmake/: KKRTCMinDepVersions.cmake
kkrtc_base/: CMakeLists.txt  array_view.h  kkrtc_mediaformat.h  type_traits.h
kkrtc_base/memory/: CMakeLists.txt  aligned_malloc.cc  aligned_malloc.h  ref_count.h  ref_counted_object.h  ref_counter.h  scoped_refptr.h
kkrtc_base/system/: CMakeLists.txt  kkrtc_export.h
kkrtc_base/utils/: CMakeLists.txt  def_logger.cpp  def_logger.h  filesystem.cpp  filesystem.h  filesystem_glob.cpp  filesystem_glob.h  filesystem_private.cpp  filesystem_private.h  kkrtc_std.h  kkrtc_std_wrapper.h  log_helper.cpp  log_helper.h  logger_factory.h  logger_interface.h  spd_logger.cpp  spd_logger.h  time_utils.cpp  time_utils.h
kkrtc_base/video/: CMakeLists.txt  i420_buffer.cc  i420_buffer.h  nv12_buffer.cc  nv12_buffer.h  video_broadcaster.cpp  video_broadcaster.h  video_common.cpp  video_common.h  video_frame.cpp  video_frame.h  video_frame_buffer.cc  video_frame_buffer.h  video_packet.cpp  video_packet.h  video_rotation.h  video_sink_interface.h  video_source_base.cpp  video_source_base.h  video_source_interface.cpp  video_source_interface.h  video_track_source_constraints.h
kkrtc_base/video/libyuv/: CMakeLists.txt  kkrtc_libyuv.cpp  kkrtc_libyuv.h
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  kkrtc_mediaformat.h  kkrtc_plugin_loader.cpp  kkrtc_plugin_loader.h  kkrtc_plugin_log_observer.cpp  kkrtc_plugin_log_observer.h  kkrtc_plugin_params.h  kkrtc_video_sink_interface.h
modules/video_capture/: CMakeLists.txt
modules/video_capture/core/include/: kkrtc_cap_api.h  kkrtc_cap_backend_interface.h  kkrtc_cap_interface.h  kkrtc_cap_plugin_api.h  kkrtc_cap_registry.h  kkrtc_video_capture_apis.h
modules/video_capture/core/src/: kkrtc_cap_api.cpp  kkrtc_cap_backend_plugin.cpp  kkrtc_cap_registry.cpp  kkrtc_cap_static_backend_plugin.cpp
modules/video_capture/plugins/: CMakeLists.txt
modules/video_capture/plugins/win_capture/: CMakeLists.txt  win_camera_cap_ds.cpp  win_camera_cap_ds.h
modules/video_capture/plugins/win_capture/libdshowcapture/: CMakeLists.txt
modules/video_coding/: CMakeLists.txt
modules/video_coding/core/include/: video_codec_backend_interface.h  video_codec_interface.h  video_codec_plugin_api.h  video_codec_plugin_apis.h  video_codec_registry.h  video_encodec_api.h
modules/video_coding/core/src/: video_codec_backend_impl.cpp  video_codec_registry.cpp  video_encodec_api.cpp
modules/video_coding/plugins/: CMakeLists.txt
modules/video_coding/plugins/ffmpeg/: CMakeLists.txt  ffmpeg_enc.cpp  ffmpeg_enc.h
modules/video_processor/: CMakeLists.txt
modules/video_processor/core/include/: video_processor_api.h  video_processor_api_interface.h  video_processor_backend_interface.h  video_processor_chain.h  video_processor_interface.h  video_processor_plugin_api.h  video_processor_plugin_apis.h  video_processor_registry.h  video_processor_workflow.h
modules/video_processor/core/src/: video_processor_api_impl.cpp  video_processor_backend_impl.cpp  video_processor_register.cpp  video_processor_registry.cpp  video_processor_workflow.cpp
modules/video_processor/plugins/: CMakeLists.txt
modules/video_processor/plugins/default/: CMakeLists.txt  default_video_processor.cpp  default_video_processor.h
test/: CMakeLists.txt  test_log.cpp  test_vcap_plugin.cpp  test_video_broadcaster.cpp  test_video_encodec.cpp  test_video_processor.cpp  win_camera_capture.cpp
